fix(accordion): align heading

--- a/src/components/accordion/styles.module.scss
+++ b/src/components/accordion/styles.module.scss
@@ -28,6 +28,7 @@
 		width: 100%;
 		padding-block: rem(24);
 		color: inherit;
+		text-align: left;
 		font-size: rem(18);
 		line-height: 1.5;
 		cursor: pointer;
